--- a/Layanan/index.html
+++ b/Layanan/index.html
@@ -32,7 +32,7 @@
         </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="../index.html">Beranda</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="../index.html">Beranda</a></li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                               Tentang
@@ -50,52 +50,48 @@
         </div>
     </nav>
 
-    <section class="profile mt-5">
+    <section id="services" class="py-5 bg-light services-page">
         <div class="container">
-            <div class="row mb-5">
-                <div class="col-md">
-                    <img src="../assets/sertif.jpg" width="600" height="450" alt="">
+            <div class="row d-flex mb-4">
+                <div class="col-md-5">
+                    <h1 class="fw-bold text-primary layanan-title">Apa saja layanan di <br> PT. Tiara Jaya Kalibrasi?</h1>
                 </div>
-                <div class="col-md">
-                    <h2 class="text-primary fw-bold">Profil Perusahaan</h2>
+                <div class="col-md-7">
                     <p>
-                        PT Tiara Jaya Kalibrasi adalah sebuah perusahaan yang tidak hanya berfokus pada industri peralatan presisi namun juga menawarkan jasa kalibrasi berkompeten yang dilengkapi dengan laboratorium kalibrasi terakreditasi. Didirikan pada tahun 2013, berlokasi
-                        di Kota Padang, Sumatera Barat, kami menyediakan kebutuhan jasa kalibrasi yang profesional. <br> <br> Anda dapat percayakan layanan jasa kalibrasi yang Anda butuhkan pada kami Sejak didirikan, PT Tiara Jaya
-                        Kalibrasi terus berkembang secara konsisten menjadi laboratorium yang lengkap dengan menambahkan kemampuan baru secara berkala, termasuk instrumen primer dan sekunder untuk menjadi fasilitas jasa
-
+                        Sebagai penyedia jasa kalibrasi alat dan sistem pengukuran tentu, PT. Tiara Jaya Kalibrasi memastikan bahwa setiap alat ukur yang dikalibrasi menyesuaikan dengan proses dan standar yang sudah berlaku. Dengan laboratorium kalibrasi yang terakreditasi KAN,
+                        PT. Tiara Jaya Kalibrasi menunjukkan perusahaan ini sudah memenuhi persyaratan yang ditentukan oleh negara maupun internasional.
                     </p>
-                    <h2 class="text-primary fw-bold">Terakreditasi KAN</h2>
-                    <p>
-                        PT Tiara Jaya Kalibrasi telah resmi mengantongi sertifikat akreditasi dari Komite Akreditasi Nasional (KAN), sebagai bukti kompetensi dan standar mutu layanannya.
-                    </p>
-
                 </div>
-
-
-
-
-
 
             </div>
+            <section class="reason p-4 ps-5 bg-primary">
+                <h1 class="fw-bold text-white text-center mb-5">Mengapa harus melakukan <br> Kalibrasi Alat Ukur?</h1>
+                <div class="row d-flex justify-content-center">
+                    <div class="col-md">
+                        <div class="d-flex gap-3 align-items-center">
+                            <h3 class="number fw-bold text-white">01.</h3>
+                            <h4 class="text-white">Untuk menjaga fungsi <br> dan performa alat</h4>
+                        </div>
+                    </div>
 
-            <div class="row gap-4 mb-4">
-                <div class="col-md visi mb-3">
-                    <h3 class="text-primary fw-bold">Visi</h3>
-                    <p>Untuk menjadi laboratorium kalibrasi yang dapat dipercaya dan dapat diandalkan oleh pelanggan, kami mengutamakan kualitas, akurasi, dan ketepatan waktu serta menjadi perusahaan terdepan di Indonesia dalam industri jasa laboratorium
-                        kalibrasi.
+                    <div class="col-md">
+                        <div class="d-flex gap-3 align-items-center">
+                            <h3 class="number fw-bold text-white">02.</h3>
+                            <h4 class="text-white">Menghindari cacat <br> produksi</h4>
+                        </div>
+                    </div>
 
-                    </p>
+                    <div class="col-md">
+                        <div class="d-flex gap-3 align-items-center">
+                            <h3 class="number fw-bold text-white">03.</h3>
+                            <h4 class="text-white">Menghindari resiko <br> berbahaya</h4>
+                        </div>
+                    </div>
                 </div>
-
-                <div class="col-md misi mb-3">
-                    <h3 class="text-primary fw-bold">Misi</h3>
-                    <p>Sebagai perusahaan yang memiliki kompetensi dalam layanan jasa kalibrasi, PT. Tiara Jaya Kalibrasi memberikan layanan kalibrasi yang telah terjamin. Dimana PT. Tiara Jaya Kalibrasi telah berkomitmen dalam memberikan layanan jasa kalibrasi
-                        yang dapat diandalkan dan menjadi pilihan nomor satu dalam jasa kalibrasi terbaik dibidangnya.
-                    </p>
-                </div>
-            </div>
+            </section>
         </div>
     </section>
+
 
 
 
