--- a/Layanan/index.html
+++ b/Layanan/index.html
@@ -64,27 +64,27 @@
                 </div>
 
             </div>
-            <section class="reason p-4 ps-5 bg-primary">
-                <h1 class="fw-bold text-white text-center mb-5">Mengapa harus melakukan <br> Kalibrasi Alat Ukur?</h1>
+            <section class="reason p-4 ps-5 bg-white">
+                <h1 class="fw-bold text-primary text-center mb-5">Mengapa harus melakukan <br> Kalibrasi Alat Ukur?</h1>
                 <div class="row d-flex justify-content-center">
                     <div class="col-md">
                         <div class="d-flex gap-3 align-items-center">
-                            <h3 class="number fw-bold text-white">01.</h3>
-                            <h4 class="text-white">Untuk menjaga fungsi <br> dan performa alat</h4>
+                            <h3 class="number fw-bold text-primary">01.</h3>
+                            <h4 class="text-primary">Untuk menjaga fungsi <br> dan performa alat</h4>
                         </div>
                     </div>
 
                     <div class="col-md">
                         <div class="d-flex gap-3 align-items-center">
-                            <h3 class="number fw-bold text-white">02.</h3>
-                            <h4 class="text-white">Menghindari cacat <br> produksi</h4>
+                            <h3 class="number fw-bold text-primary">02.</h3>
+                            <h4 class="text-primary">Menghindari cacat <br> produksi</h4>
                         </div>
                     </div>
 
                     <div class="col-md">
                         <div class="d-flex gap-3 align-items-center">
-                            <h3 class="number fw-bold text-white">03.</h3>
-                            <h4 class="text-white">Menghindari resiko <br> berbahaya</h4>
+                            <h3 class="number fw-bold text-primary">03.</h3>
+                            <h4 class="text-primary">Menghindari resiko <br> berbahaya</h4>
                         </div>
                     </div>
                 </div>
