--- a/Profile/index.html
+++ b/Profile/index.html
@@ -94,7 +94,173 @@
                     </p>
                 </div>
             </div>
+
+            <section class="calibrate-user">
+                <h1 class="text-primary fw-bold mb-3">
+                    Pengguna Jasa Kalibrasi
+                </h1>
+                <p>Berikut adalah perusahaan dari berbagai provinsi dan berbagai bidang yang menggunakan jasa kalibrasi dari PT Tiara Jaya Kalibrasi.</p>
+                <div class="row d-flex justify-content-between">
+                    <div class="col-md">
+                        <h3 class="text-black fw-bold">Provinsi Sumatera Utara</h3>
+                        <p class="company-name">1. PT. Anugrah Sibolga Lestari</p>
+                        <p class="company-name">2. PT. Virginia Company</p>
+                        <p class="company-name">3. PT. Kirana Sapta</p>
+                        <p class="company-name">4. PT. PP London Sumater Indonesia TBK</p>
+                        <p class="company-name">5. PT. Hock Lie Rantau Prapat</p>
+                        <p class="company-name">6. PT. Kapuas Besar</p>
+                        <p class="company-name">7. PT. Socfin Aek Pamienke</p>
+                        <p class="company-name">8. PTPN Regional IV Gunung Para </p>
+                        <p class="company-name">9. PT. Bakri Sumatra Plantation</p>
+                        <p class="company-name">10. PT. Wipiolimex Raya </p>
+                        <p class="company-name">11. PT. Pantja Surya</p>
+                        <p class="company-name">12. PT. Madjin CRF</p>
+                        <p class="company-name">13. PT. Bridgestone SRE TBK</p>
+                        <p class="company-name">14. PTPN IV Regional Gunung Para</p>
+                        <p class="company-name">15. PT. Socfindo Tanah Besih</p>
+                        <p class="company-name">16. PT. Darmasindo Inti Karet</p>
+                        <p class="company-name">17. PT. Nusira</p>
+                        <p class="company-name">18. PT. Asahan</p>
+                        <p class="company-name">19. PT. PP London Sumatera Ind SEI.Merah</p>
+                        <p class="company-name">20. PT. Hock Lie Sunggal</p>
+                        <p class="company-name">21. PT. Poly Kencana</p>
+                        <p class="company-name">22. PT. Aroma Tj. Morawa</p>
+                        <p class="company-name">23. PT. Aroma Jl. Timor</p>
+                        <p class="company-name">24. PT. Yolan Tiga Indonesia R.Prapat</p>
+                        <p class="company-name">25. PT. Umbul Mas Wisesa</p>
+                    </div>
+
+                    <div class="col-md">
+                        <h3 class="text-black fw-bold">Provinsi Sumatera Barat</h3>
+                        <p class="company-name">1. PT. Teluk Luas</p>
+                        <p class="company-name">2. PT. Famili Raya</p>
+                        <p class="company-name">3. PT. Kilang Lima Gunung</p>
+                        <p class="company-name">4. PT. Abaisiat Raya</p>
+                        <p class="company-name">5. Lab. Klinik Pramita</p>
+                        <p class="company-name">6. CV. Anom</p>
+                        <p class="company-name">7. PT. Sumatera Tropical Spises</p>
+                        <p class="company-name">8. PT. Bumisarimas Kelapa</p>
+                        <p class="company-name">9. PUPR Padang</p>
+                        <p class="company-name">10. PT. Natraco Spices Indonesia</p>
+                        <p class="company-name">11. Dinas Kesehatan Lb.Sikaping</p>
+                        <p class="company-name">12. Dinas Kesehatan Bukittinggi</p>
+                        <p class="company-name">13. Rumah Sakit Umum Padang</p>
+                        <p class="company-name">14. Laboratorium Perikanan Bungus</p>
+                        <p class="company-name">15. Laboratorium Lingkungan Payakumbuh</p>
+                        <p class="company-name">16. Laboratorium Lingkungan Pd.Panjang</p>
+                        <p class="company-name">17. Laboratorium Lingkungan Agam</p>
+                        <p class="company-name">18. Laboratorium Lingkungan Pes.Selatan</p>
+                        <p class="company-name">19. Laboratorium Klinik Hewan Sumbar</p>
+                        <p class="company-name">20. Laboratorium Lingkungan Sumbar</p>
+                        <p class="company-name">21. Laboratorium Pertanian Padang</p>
+                        <p class="company-name">22. Universitas UNP Padang</p>
+                        <p class="company-name">23. Universitas Perintis Indonesia</p>
+                        <p class="company-name">24. PDAM Kota Padang</p>
+                        <p class="company-name">25. PT. Kunango Jantan</p>
+                    </div>
+                    <div class="col-md">
+                        <h3 class="text-black fw-bold">Provinsi Sumatera Barat</h3>
+                        <p class="company-name">1. PT. ABP Palembang</p>
+                        <p class="company-name">2. PT. Panca Samudra Simpati</p>
+                        <p class="company-name">3. PT. Gadjah Ruku</p>
+                        <p class="company-name">4. PT. Hevea MK.II</p>
+                        <p class="company-name">5. PT. Remco Rubber Indonesia</p>
+                        <p class="company-name">6. PT. Hoktong Keramasan</p>
+                        <p class="company-name">7. PT. Hoktong Plaju</p>
+                        <p class="company-name">8. PT. Sunan Rubber</p>
+                        <p class="company-name">9. PT. Bintang Agung Persada</p>
+                        <p class="company-name">10. PT. Mardec Musi Lestari</p>
+                        <p class="company-name">11. PT. Lingga Jaya</p>
+                        <p class="company-name">12. PT. Kirana Permata</p>
+                        <p class="company-name">13. PT. Karini Utama</p>
+                        <p class="company-name">14. PT. Fajar Berseri</p>
+                        <p class="company-name">15. PT. Lonsum Cengal CRF</p>
+                        <p class="company-name">16. PT. Bintang Gasing Persada</p>
+                        <p class="company-name">17. PT. Kirana Musu Persada</p>
+                        <p class="company-name">18. PT. Pinago Utama</p>
+                        <p class="company-name">19. PT. Kirana Windu</p>
+                        <p class="company-name">20. PT. Bumi Beliti Abadi</p>
+                        <p class="company-name">21. PT. Warna Agung Selatan</p>
+                        <p class="company-name">22. PT. Karet Batin Delapan</p>
+                        <p class="company-name">23. Lab Pramita Palembang</p>
+
+                    </div>
+                </div>
+
+                <div class="row d-flex">
+                    <div class="col-md">
+                        <h3 class="text-black fw-bold">Provinsi Riau & Pekanbaru</h3>
+                        <p class="company-name">1. PT. Tirta Sari Surya</p>
+                        <p class="company-name">2. PTPN V Sei Lindai</p>
+                        <p class="company-name">3. PT. Poly Bangkinang Raya CFF</p>
+                        <p class="company-name">4. PT. Pulau Bintan Djaya</p>
+                        <p class="company-name">5. Lab. Klinik Pramita Pekanbaru</p>
+                        <p class="company-name">6. PT. KLK Dumai</p>
+                        <p class="company-name">7. PT. Aplied Agrikultura</p>
+                    </div>
+
+                    <div class="col-md">
+                        <h3 class="text-black fw-bold">Provinsi Jambi</h3>
+                        <p class="company-name">1. PT. Djambi Waras Jujuhan</p>
+                        <p class="company-name">2. PT. Anugrah Bungo Lestari</p>
+                        <p class="company-name">3. PT. Hok Tong Jambi</p>
+                        <p class="company-name">4. PT. Remco Jambi</p>
+                        <p class="company-name">5. PT. Djambi Waras Jambi</p>
+                        <p class="company-name">6. PT. Aneka Bumi Pratama</p>
+                        <p class="company-name">7. PT. Tirta Utama Jaya</p>
+                    </div>
+
+                    <div class="col-md">
+                        <h3 class="text-black fw-bold">Provinsi Bengkulu</h3>
+                        <p class="company-name">1. PT. Bukit Angkasa Makmur</p>
+                        <p class="company-name">2. PT. Pamor Ganda</p>
+                        <p class="company-name">3. UPTD PPMB Disperindag</p>
+                        <p class="company-name">4. UPTD BPSB TPHP</p>
+                        <p class="company-name">5. PT. Bio Nusantara Teknologi</p>
+                        <p class="company-name">6. PT. Sandabi Indah Lestari</p>
+                        <p class="company-name">7. PT. Sembilan Pilar Utama</p>
+                    </div>
+                </div>
+
+                <div class="row d-flex">
+                    <div class="col-md">
+                        <h3 class="text-black fw-bold">Provinsi Kalimantan Selatan <br> dan Tengah</h3>
+                        <p class="company-name">1. PT. Wilson Lautan Karert</p>
+                        <p class="company-name">2. PT. Insan Bonafide</p>
+                        <p class="company-name">3. PT. Dharma Kalimantan Jaya</p>
+                        <p class="company-name">4. PT. Bumi Jaya CRF</p>
+                        <p class="company-name">5. PT. Bumi Asri Pasaman</p>
+                        <p class="company-name">6. PT. Borneo Makmur Lestari</p>
+                        <p class="company-name">7. PT. Kahayan Berseri</p>
+                    </div>
+
+                    <div class="col-md">
+                        <h3 class="text-black fw-bold">Provinsi Kalimantan Barat</h3>
+                        <p class="company-name">1. PT. New Kalbar Processor</p>
+                        <p class="company-name">2. PT. Sumber Djantin Pontianak</p>
+                        <p class="company-name">3. PT. Sumber Alam</p>
+                        <p class="company-name">4. PT. Hok Tong Pontianak</p>
+                        <p class="company-name">5. PT. GMG Sentosa</p>
+                        <p class="company-name">6. PT. Bintang Borneo Persada</p>
+
+                    </div>
+
+                    <div class="col-md">
+                        <h3 class="text-black fw-bold">Provinsi Banten</h3>
+                        <p class="company-name">1. PT. Nusa Alam Rubber</p>
+                        <p class="company-name">2. CV. Sinar Jaya</p>
+                        <h3 class="text-black fw-bold">Provinsi Sulawesi Selatan</h3>
+                        <p class="company-name">1. PT. PP London Sumatera Indonesia TBK</p>
+                        <h3 class="text-black fw-bold">Provinsi Lampung</h3>
+                        <p class="company-name">1. PT. Komering Jaya Perdana</p>
+
+                    </div>
+
+                </div>
+            </section>
         </div>
+
+
     </section>
 
 
