--- a/Profile/index.html
+++ b/Profile/index.html
@@ -21,7 +21,7 @@
     <nav class="navbar navbar-expand-lg bg-light shadow-sm">
         <div class="container">
             <a class="navbar-brand d-flex align-items-center" href="#">
-                <img src="../assets/logo.png" width="60px" height="60px" alt="Company Logo">
+                <img src="assets/logo.png" width="60px" height="60px" alt="Company Logo">
                 <div class="ms-2 mt-1 text-start" style="line-height: 0.9;">
                     <span class="d-block fw-bold" style="font-size: 1.25rem; margin-bottom: 2px;">Tiara Jaya</span>
                     <span class="d-block fw-bold" style="font-size: 1.25rem; margin-top: 2px;">Kalibrasi</span>
@@ -32,18 +32,18 @@
         </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="../index.html">Beranda</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="#about">Beranda</a></li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                               Tentang
                          </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#vision">Visi</a></li>
-                            <li><a class="dropdown-item" href="#mission">Misi</a></li>
-                            <li><a class="dropdown-item" href="#history">Sejarah</a></li>
+                            <li><a class="dropdown-item" href="Profile/index.html">Profil PT. Tiara Jaya</a></li>
+                            <li><a class="dropdown-item" href="Legalitas/index.html">Legalitas PT. Tiara Jaya</a></li>
+                            <li><a class="dropdown-item" href="#history">Kebijakan PT. Tiara Jaya</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item"><a class="nav-link" href="#team">Layanan</a></li>
+                    <li class="nav-item"><a class="nav-link" href="Layanan/index.html">Layanan</a></li>
                     <li class="nav-item"><a class="nav-link" href="#contact">Kontak</a></li>
                 </ul>
             </div>
@@ -52,9 +52,9 @@
 
     <section class="profile mt-5">
         <div class="container">
-            <div class="row mb-5">
+            <div class="row mb-5 gap-3">
                 <div class="col-md">
-                    <img src="../assets/sertif.jpg" width="600" height="450" alt="">
+                    <img class="" src="../assets/sertif.jpg" style="width: 100%;" alt="">
                 </div>
                 <div class="col-md">
                     <h2 class="text-primary fw-bold">Profil Perusahaan</h2>
@@ -78,7 +78,7 @@
 
             </div>
 
-            <div class="row gap-4 mb-4">
+            <div class="row gap-4 mb-4 p-3">
                 <div class="col-md visi mb-3">
                     <h3 class="text-primary fw-bold">Visi</h3>
                     <p>Untuk menjadi laboratorium kalibrasi yang dapat dipercaya dan dapat diandalkan oleh pelanggan, kami mengutamakan kualitas, akurasi, dan ketepatan waktu serta menjadi perusahaan terdepan di Indonesia dalam industri jasa laboratorium
