--- a/Layanan/index.html
+++ b/Layanan/index.html
@@ -98,7 +98,7 @@
 
 
     <!-- Footer -->
-    <footer class="py-4 bg-dark text-white text-center">
+    <footer class="bg-dark text-white text-center pt-4">
         <div class="container">
             <p>&copy; 2024 PT. Tiara Jaya Kalibrasi. All rights reserved.</p>
         </div>
