--- a/Profile/index.html
+++ b/Profile/index.html
@@ -32,18 +32,18 @@
         </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link active" href="#about">Beranda</a></li>
+                    <li class="nav-item"><a class="nav-link" href="../index.html">Beranda</a></li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link active dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                               Tentang
                          </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="Profile/index.html">Profil PT. Tiara Jaya</a></li>
-                            <li><a class="dropdown-item" href="Legalitas/index.html">Legalitas PT. Tiara Jaya</a></li>
+                            <li><a class="dropdown-item" href="../Profile/index.html">Profil PT. Tiara Jaya</a></li>
+                            <li><a class="dropdown-item" href="../Legalitas/index.html">Legalitas PT. Tiara Jaya</a></li>
                             <li><a class="dropdown-item" href="#history">Kebijakan PT. Tiara Jaya</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item"><a class="nav-link" href="Layanan/index.html">Layanan</a></li>
+                    <li class="nav-item"><a class="nav-link" href="../Layanan/index.html">Layanan</a></li>
                     <li class="nav-item"><a class="nav-link" href="#contact">Kontak</a></li>
                 </ul>
             </div>
@@ -268,7 +268,7 @@
 
 
     <!-- Footer -->
-    <footer class="py-4 bg-dark text-white text-center">
+    <footer class="bg-dark text-white text-center pt-4">
         <div class="container">
             <p>&copy; 2024 PT. Tiara Jaya Kalibrasi. All rights reserved.</p>
         </div>
