--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
 </head>
@@ -72,7 +73,7 @@
                     <img src="assets/about.jpg" alt="About Us" class="img-fluid rounded">
                 </div>
                 <div class="col-md-6" data-aos="fade-left">
-                    <h2 class="text-primary fw-bold">Profil Perusahaan</h2>
+                    <h2 class="text-primary fw-bold profile-title">Profil Perusahaan</h2>
                     <p>PT Tiara Jaya Kalibrasi adalah sebuah perusahaan yang tidak hanya berfokus pada industri peralatan presisi namun juga menawarkan jasa kalibrasi berkompeten yang dilengkapi dengan laboratorium kalibrasi terakreditasi. Didirikan pada
                         tahun 2013, berlokasi di Kota Padang, Sumatera Barat, kami menyediakan kebutuhan jasa kalibrasi yang profesional. Anda dapat percayakan layanan jasa kalibrasi yang anda butuhkan pada kami <br> Sejak didirikan, PT Tiara Jaya Kalibrasi
                         terus berkembang secara konsisten menjadi laboratorium yang lengkap dengan menambahkan kemampuan baru secara berkala , termasuk instrumen primer dan sekunder untuk menjadi fasilitas jasa professional dan terpercaya.
@@ -87,10 +88,10 @@
     <section id="services" class="py-5 bg-light">
         <div class="container">
             <div class="row d-flex">
-                <div class="col-md-5">
+                <div class="col-md-5" data-aos="fade-right">
                     <h1 class="fw-bold text-primary layanan-title">Apa saja layanan di <br> PT. Tiara Jaya Kalibrasi?</h1>
                 </div>
-                <div class="col-md-7">
+                <div class="col-md-7" data-aos="fade-left">
                     <p>
                         Sebagai penyedia jasa kalibrasi alat dan sistem pengukuran tentu, PT. Tiara Jaya Kalibrasi memastikan bahwa setiap alat ukur yang dikalibrasi menyesuaikan dengan proses dan standar yang sudah berlaku. Dengan laboratorium kalibrasi yang terakreditasi KAN,
                         PT. Tiara Jaya Kalibrasi menunjukkan perusahaan ini sudah memenuhi persyaratan yang ditentukan oleh negara maupun internasional.
@@ -110,29 +111,33 @@
     <!-- Contact Section -->
     <section id="contact" class="py-5 bg-light">
         <div class="container">
-            <h2 class="text-center mb-4">Contact Us</h2>
-            <form>
-                <div class="row">
-                    <div class="col-md-6 mb-3">
-                        <label for="name" class="form-label">Name</label>
-                        <input type="text" class="form-control" id="name" placeholder="Your Name">
-                    </div>
-                    <div class="col-md-6 mb-3">
-                        <label for="email" class="form-label">Email</label>
-                        <input type="email" class="form-control" id="email" placeholder="Your Email">
-                    </div>
+            <h2 class="text-center text-primary contact-title fw-bold mb-4">Contact Us</h2>
+
+            <div class="row">
+                <div class="col-md">
+                    <div style="width: 100%"><iframe class="company-location" width="100%" height="600" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=PT.%20Tiara%20Jaya%20Kalibrasi,%20Air%20Tawar%20Bar.,%20Kec.%20Padang%20Utara,%20Kota%20Padang,%20Sumatera%20Barat+(PT%20Tiara%20Jaya)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a href="https://www.gps.ie/">gps systems</a></iframe></div>
                 </div>
-                <div class="mb-3">
-                    <label for="message" class="form-label">Message</label>
-                    <textarea class="form-control" id="message" rows="5" placeholder="Your Message"></textarea>
+
+                <div class="col-md">
+                    <h3 class="text-primary fw-bold"><i class="fa-solid fa-sm fa-location-dot"></i> Alamat</h3>
+                    <p> PT. Tiara Jaya Kalibrasi, Air Tawar Bar., Kec. Padang Utara, Kota Padang, Sumatera Barat</p><br>
+                    <h3 class="text-primary fw-bold"><i class="fa-solid fa-phone"></i> Nomor Telpon</h3>
+                    <p class="contact-phone">Telepon : 089999999</p>
+                    <p class="contact-phone">FAX : 0899999999</p>
+                    <p class="contact-phone">Pemasaran : 089999999</p><br>
+                    <h3 class="text-primary fw-bold"><i class="fa-solid fa-envelope"></i> Email</h3>
+                    <p class="contact-phone">Email : tiarajaya@gmail.com</p>
+                    <p class="contact-phone">Info Kalibrasi : infotiarajaya@yahoo.co.id</p>
+
                 </div>
-                <button type="submit" class="btn btn-primary">Send</button>
-            </form>
+            </div>
+
+
         </div>
     </section>
 
     <!-- Footer -->
-    <footer class="py-4 bg-dark text-white text-center">
+    <footer class="bg-dark text-white text-center pt-4">
         <div class="container">
             <p>&copy; 2024 PT. Tiara Jaya Kalibrasi. All rights reserved.</p>
         </div>
