--- a/Layanan/index.html
+++ b/Layanan/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Legalitas | Tiara Jaya Kalibrasi</title>
+    <title>Layanan | Tiara Jaya Kalibrasi</title>
     <!-- CSS -->
     <link rel="stylesheet" href="../css/style.css">
     <link rel="icon" href="../assets/logo.png" type="image/x-icon">
@@ -12,6 +12,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
 </head>
@@ -64,7 +65,7 @@
                 </div>
 
             </div>
-            <section class="reason p-4 ps-5 bg-white">
+            <section class="reason p-4 ps-5 bg-white mb-5">
                 <h1 class="fw-bold text-primary text-center mb-5">Mengapa harus melakukan <br> Kalibrasi Alat Ukur?</h1>
                 <div class="row d-flex justify-content-center">
                     <div class="col-md">
@@ -89,6 +90,33 @@
                     </div>
                 </div>
             </section>
+
+            <section class="benefit">
+                <h1 class="text-primary fw-bold text-center mb-4">Keuntungan Laboratorium Kalibrasi <br> PT. Tiara Jaya Kalibrasi</h1>
+                <div class="row d-flex gap-4">
+                    <div class="col-md text-center benefit-container">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" width="150px" height="150px" stroke="currentColor" class="benefit-icon mb-3 text-primary">
+                         <path stroke-linecap="round" stroke-linejoin="round" d="M9 12.75 11.25 15 15 9.75M21 12c0 1.268-.63 2.39-1.593 3.068a3.745 3.745 0 0 1-1.043 3.296 3.745 3.745 0 0 1-3.296 1.043A3.745 3.745 0 0 1 12 21c-1.268 0-2.39-.63-3.068-1.593a3.746 3.746 0 0 1-3.296-1.043 3.745 3.745 0 0 1-1.043-3.296A3.745 3.745 0 0 1 3 12c0-1.268.63-2.39 1.593-3.068a3.745 3.745 0 0 1 1.043-3.296 3.746 3.746 0 0 1 3.296-1.043A3.746 3.746 0 0 1 12 3c1.268 0 2.39.63 3.068 1.593a3.746 3.746 0 0 1 3.296 1.043 3.746 3.746 0 0 1 1.043 3.296A3.745 3.745 0 0 1 21 12Z" />
+                        </svg>
+
+                        <h3 class="text-primary fw-bold">Bersertifikasi Komite Akreditasi Nasional</h3>
+                    </div>
+                    <div class="col-md text-center benefit-container">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="150px" height="150px" fill="currentColor" class="bi bi-person-check text-primary mb-3" viewBox="0 0 16 16">
+  <path d="M12.5 16a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7m1.679-4.493-1.335 2.226a.75.75 0 0 1-1.174.144l-.774-.773a.5.5 0 0 1 .708-.708l.547.548 1.17-1.951a.5.5 0 1 1 .858.514M11 5a3 3 0 1 1-6 0 3 3 0 0 1 6 0M8 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4"/>
+  <path d="M8.256 14a4.5 4.5 0 0 1-.229-1.004H3c.001-.246.154-.986.832-1.664C4.484 10.68 5.711 10 8 10q.39 0 .74.025c.226-.341.496-.65.804-.918Q8.844 9.002 8 9c-5 0-6 3-6 4s1 1 1 1z"/>
+</svg>
+
+                        <h3 class="text-primary fw-bold">Tenaga kerja yang berpengalaman</h3>
+                    </div>
+                    <div class="col-md text-center benefit-container">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="150px" height="150px" fill="currentColor" class="bi bi-sliders2-vertical text-primary mb-3" viewBox="0 0 16 16">
+  <path fill-rule="evenodd" d="M0 10.5a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 0-1H3V1.5a.5.5 0 0 0-1 0V10H.5a.5.5 0 0 0-.5.5M2.5 12a.5.5 0 0 0-.5.5v2a.5.5 0 0 0 1 0v-2a.5.5 0 0 0-.5-.5m3-6.5A.5.5 0 0 0 6 6h1.5v8.5a.5.5 0 0 0 1 0V6H10a.5.5 0 0 0 0-1H6a.5.5 0 0 0-.5.5M8 1a.5.5 0 0 0-.5.5v2a.5.5 0 0 0 1 0v-2A.5.5 0 0 0 8 1m3 9.5a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 0-1H14V1.5a.5.5 0 0 0-1 0V10h-1.5a.5.5 0 0 0-.5.5m2.5 1.5a.5.5 0 0 0-.5.5v2a.5.5 0 0 0 1 0v-2a.5.5 0 0 0-.5-.5"/>
+</svg>
+                        <h3 class="text-primary fw-bold">Fasilitas pengukuran <br> yang baik</h3>
+                    </div>
+                </div>
+            </section>
         </div>
     </section>
 
@@ -106,6 +134,7 @@
 
     <!-- Bootstrap Bundle JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://kit.fontawesome.com/4769a5109f.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
