--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <section id="about" class="py-5">
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-md-6" data-aos="fade-right">
+                <div class="col-md-6 d-none-mobile" data-aos="fade-right">
                     <img src="assets/about.jpg" alt="About Us" class="img-fluid rounded">
                 </div>
                 <div class="col-md-6" data-aos="fade-left">
